# polimiphd-ImpressionsEvaluation

./: .gitignore  ContentWiseImpressionsReader.py  FINNNoReader.py  MINDReader.py  MINDSmallReader.py  README.md  build.py  data_splitter.py  main.py  mixins.py  pyproject.toml  run_as_cron.sh  utils.py
experiments/: baselines.py  commons.py  confidence_intervals.py  evaluation.py  heuristics.py  print_results.py  print_statistics.py  re_ranking.py  statistical_tests.py  time_aware.py  user_profiles.py
impression_recommenders/: constants.py  dithering.py
impression_recommenders/heuristics/: frequency_and_recency.py  latest_impressions.py
impression_recommenders/re_ranking/: cycling.py  dithering.py  impressions_discounting.py
impression_recommenders/user_profile/: folding.py  weighted.py
impressions_evaluation/: __init__.py
impressions_evaluation/experiments/: baselines.py  commons.py  confidence_intervals.py  hyperparameters.py  impression_aware.py  print_results.py  print_statistics.py  re_ranking.py  statistical_tests.py  time_aware.py  user_profiles.py
impressions_evaluation/experiments/graph_based/: __init__.py  results.py  statistical_tests.py
impressions_evaluation/experiments/impression_aware/: __init__.py  heuristics.py  re_ranking.py  user_profiles.py
impressions_evaluation/impression_recommenders/: constants.py
impressions_evaluation/impression_recommenders/gbdt/: gbdt.py  lambdamart.py
impressions_evaluation/impression_recommenders/graph_based/: lightgcn.py  p3_alpha.py  rp3_beta.py
impressions_evaluation/impression_recommenders/heuristics/: frequency_and_recency.py  latest_impressions.py
impressions_evaluation/impression_recommenders/matrix_factorization/: SFC.py  mf_bpr.py  mf_bpr_jax.py  sfc_jax.py
impressions_evaluation/impression_recommenders/matrix_factorization/cython/: framework.pxd  framework.pyx  mf.pyx
impressions_evaluation/impression_recommenders/matrix_factorization/jax/: model_mfbpr.py  model_sfc.py
impressions_evaluation/impression_recommenders/re_ranking/: cycling.py  dithering.py  hard_frequency_capping.py  impressions_discounting.py
impressions_evaluation/impression_recommenders/user_profile/: folding.py  weighted.py
impressions_evaluation/readers/: ContentWiseImpressionsReader.py  FINNNoReader.py  MINDReader.py
impressions_evaluation/readers/ContentWiseImpressions/: reader.py  statistics.py
impressions_evaluation/readers/FINNNoSlates/: reader.py  statistics.py
impressions_evaluation/readers/MIND/: reader.py  statistics.py
plotting/: notebook.py
readers/: ContentWiseImpressionsReader.py  FINNNoReader.py  MINDReader.py
scripts/: compute_cw_impressions_statistics_thesis.py  compute_datasets_statistics.py  compute_datasets_statistics_thesis.py  compute_evaluation_study_datasets_statistics.py  compute_statistics_thesis_cw_impressions_dataset.py  install_gpu_support_linux_cuda118.sh  run_2022_evaluation_study.py  run_as_cron.sh  run_evaluation_study_graph_based_impression_aware_recommenders.py  run_evaluation_study_impression_aware_recommenders.py  run_graph_based.py  run_mf_bpr.py  run_soft_frequency_capping.py  setup_dask_local_cluster.py
tests/: conftest.py  others.py
tests/feature_extraction/: test_features.py
tests/impression_recommenders/: conftest.py
tests/impression_recommenders/heuristics/: test_frequency_and_recency.py  test_latest_impressions.py
tests/impression_recommenders/matrix_factorization/: test_SFC.py  test_mf_bpr.py
tests/impression_recommenders/re_ranking/: test_cycling.py  test_dithering.py  test_hard_frequency_capping.py  test_impressions_discounting.py
tests/impression_recommenders/user_profile/: test_folding.py  test_weighted.py
