[tool.mypy]
python_version = 3.9
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[email.gmail]
path_credential_json = "./credentials.json"
path_token_json = "./token.json"

[dask]
use_processes = true
dashboard_address = ":8787"
scheduler_port = 8786
num_workers = 4
threads_per_worker = 1
memory_limit = 0

[logs]
dir_logs = "logs"
filename_logs = "impressions_evaluation.log"

[tool.poetry]
name = "impressions-evaluation"
version = "1.0.0"
description = ""
authors = [
    "Fernando Benjamin PEREZ MAURERA <fernandobenjamin.perez@polimi.it>"
]
readme = "README.md"
packages = [
    { include = "impressions_evaluation" },
]

[tool.poetry.dependencies]
python = "~3.9"
typed-argument-parser = "^1.7.2"
recsys-framework-public = { path = "../RecSysFramework_public/", develop = true }  # Use this when publishing the repo.
recsys-framework-extensions = { path = "../recsys-framework-extensions/", develop = true, extras = ["email-gmail"] }  # Use this when publishing the repo.
sparse = "^0.13.0"

[tool.poetry.dev-dependencies]
mypy = "^0.971"
black = "^22.6.0"
pytest = "^7.1.2"
memory-profiler = "^0.60.0"
types-toml = "^0.10.8"
pylint = "^2.14.5"
Faker = "^13.15.0"
mock = "^4.0.3"
types-mock = "^4.0.15"
jupyterlab = "^3.4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
