[tool.mypy]
python_version = 3.11
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[email.gmail]
path_credential_json = "./credentials.json"
path_token_json = "./token.json"

[dask]
use_processes = true
dashboard_address = ":8787"
scheduler_port = 8786
num_workers = 1
threads_per_worker = 1
memory_limit = 0

[logs]
dir_logs = ".logs"
filename_logs = "impressions_evaluation.log"

[tool.poetry]
name = "impressions-evaluation"
version = "1.0.0"
description = ""
authors = [
    "Fernando Benjamin PEREZ MAURERA <fernandobenjamin.perez@polimi.it>"
]
readme = "README.md"
packages = [
    { include = "impressions_evaluation" },
]

[tool.poetry.dependencies]
python = "~3.11"
typed-argument-parser = "^1.8.1"
recsys-framework-public = { path = "../RecSysFramework_public/", develop = true }  # Use this when publishing the repo.
recsys-framework-extensions = { path = "../recsys-framework-extensions/", develop = true, extras = ["email-gmail"] }  # Use this when publishing the repo.

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = "^23.3.0"
pytest = "^7.4.0"
memory-profiler = "^0.61.0"
types-toml = "^0.10.8.6"
pylint = "^2.17.4"
Faker = "^18.11.2"
mock = "^5.0.2"
types-mock = "^5.0.0.7"
jupyterlab = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
