[tool.mypy]
python_version = 3.10
allow_redefinition = false
check_untyped_defs = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
local_partial_types = true
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true

[email.gmail]
path_credential_json = "./credentials.json"
path_token_json = "./token.json"

[dask]
use_processes = true
num_workers = 6
threads_per_worker = 1
memory_limit = 0 # "30GiB" #0
dashboard_address = ":8787"
scheduler_port = 8786

[logs]
dir_logs = ".logs"
filename_logs = "impressions_evaluation.log"

[tool.poetry]
name = "impressions-evaluation"
version = "1.0.0"
description = ""
authors = [
    "Fernando Benjamin PEREZ MAURERA <fernandobenjamin.perez@polimi.it>"
]
readme = "README.md"
packages = [
    { include = "impressions_evaluation" },
]

[tool.poetry.dependencies]
python = "~3.10"
typed-argument-parser = "^1.8.1"
recsys-framework-public = { path = "../RecSysFramework_public/", develop = true }  # Use this when publishing the repo.
recsys-framework-extensions = { path = "../recsys-framework-extensions/", develop = true, extras = ["email-gmail"] }  # Use this when publishing the repo.
numpy = "1.23.2"
cython = "0.29.36"
jax = [
    {platform = 'darwin', extras = ["cpu"], version = "^0.4.13"},
    {platform = 'linux', extras = ["cpu"], version = "^0.4.13"},
]
optax = "^0.1.5"
python-dotenv = "^1.0.0"
lightgbm = "^4.0.0"
tikzplotlib = "^0.10.1"
powerlaw = "^1.5"
paxplot = "^0.1.4b2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
black = {extras = ["d"], version = "^23.3.0"}
pytest = "^7.4.0"
memory-profiler = "^0.61.0"
types-toml = "^0.10.8.6"
pylint = "^2.17.4"
Faker = "^18.11.2"
mock = "^5.0.2"
types-mock = "^5.0.0.7"
jupyterlab = "^4.0.2"
gpustat = "^1.1"

# How to include a script to build the package can be seen here: https://github.com/python-poetry/poetry/issues/11#issuecomment-379484540
# example pyproject.toml: https://github.com/sdispater/pendulum/blob/master/pyproject.toml
# example build.py (aka our build.py): https://github.com/sdispater/pendulum/blob/master/build.py
[tool.poetry.build]
generate-setup-file = false
script = "build.py"

[build-system]
# IMPORTANT: numpy and Cython versions in the `build-system` MUST match the ones used in the `dependencies` section.
requires = ["setuptools", "numpy==1.23.2", "Cython==0.29.36", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
